# oku-gui

./: Cargo.toml  README.md  c-build.sh
crates/oku_c/: cbindgen.toml
crates/oku_core/: Cargo.toml
crates/oku_core/src/: application.rs  lib.rs  lib2.rs  options.rs  widget_id.rs
crates/oku_core/src/c/: elements.rs  mod.rs  style.rs
crates/oku_core/src/components/: component.rs  mod.rs  props.rs
crates/oku_core/src/devtools/: dev_tools_widget.rs  mod.rs
crates/oku_core/src/elements/: canvas.rs  color.rs  component.rs  container.rs  element.rs  empty.rs  image.rs  layout_context.rs  mod.rs  standard_element.rs  style.rs  text.rs  text_input.rs  trees.rs
crates/oku_core/src/engine/: mod.rs
crates/oku_core/src/engine/events/: internal.rs  mod.rs  pointer_button.rs  resource_event.rs
crates/oku_core/src/engine/renderer/: color.rs  mod.rs  renderer.rs
crates/oku_core/src/engine/renderer/softbuffer/: mod.rs
crates/oku_core/src/engine/renderer/wgpu/: camera.rs  context.rs  mod.rs  pipeline_2d.rs  shader.wgsl  uniform.rs
crates/oku_core/src/engine/renderer/wgpu/glyphon/src/: text_render.rs
crates/oku_core/src/events/: mod.rs
crates/oku_core/src/geometry/: point.rs
crates/oku_core/src/platform/: mod.rs
crates/oku_core/src/platform/event_loop/: mod.rs
crates/oku_core/src/platform/resource_manager/: identifier.rs  image.rs  mod.rs  resource.rs  resource_data.rs
crates/oku_core/src/platform/runtimes/: native.rs
crates/oku_core/src/reactive/: reactive.rs  tree.rs  use_state.rs
crates/oku_core/src/renderer/: color.rs  renderer.rs  shader.wgsl
crates/oku_core/src/renderer/softbuffer/: mod.rs
crates/oku_core/src/renderer/vello/: mod.rs
crates/oku_core/src/renderer/wgpu/: mod.rs
crates/oku_core/src/renderer/wgpu/image/: image.rs
crates/oku_core/src/renderer/wgpu/rectangle/: mod.rs
crates/oku_core/src/renderer/wgpu/text/: text.rs
crates/oku_core/src/style/: style.rs
crates/oku_core/src/tests/: mod.rs
crates/oku_core/src/user/components/: component.rs  component_pre_order_iterator.rs  mod.rs
crates/oku_core/src/user/elements/: container.rs  element.rs  empty.rs  image.rs  layout_context.rs  style.rs  text.rs
crates/oku_core/src/user/reactive/: element_id.rs  fiber_node.rs  mod.rs  reactive.rs  tree.rs
crates/oku_dylib/: Cargo.toml
crates/oku_dylib/src/: lib.rs
docs/: api.md
examples/accordion/: accordion.rs  accordion_component.rs
examples/c/: main.c
examples/counter/: counter.rs
examples/events/: events.rs
examples/request/: request.rs
examples/test_binary/: counter.rs  test_binary.rs
src/: lib.rs
