[package]
name = "oku"
edition = "2021"

[features]
# Force dynamic linking, which improves iterative compile times
dynamic_linking = ["dep:oku_dylib", "oku_core/dynamic_linking"]

[dependencies]
oku_dylib = { path = "crates/oku_dylib", default-features = false, optional = true  }
oku_core = { path = "crates/oku_core", default-features = false }
rand = "0.9.0-alpha.1"

[dev-dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
reqwest = "0.12.8"
bytes = "1.7.2"

[workspace]
resolver = "2"

members = [
    "crates/oku_core",
    "crates/oku_dylib",
]

[[example]]
name = "counter"
path = "examples/counter/counter.rs"

[[example]]
name = "accordion"
path = "examples/accordion/accordion.rs"

[[example]]
name = "request"
path = "examples/request/request.rs"