[package]
name = "oku"
edition = "2021"
publish = true
version = "0.1.0"

[features]
# Force dynamic linking, which improves iterative compile times
dynamic_linking = ["dep:oku_dylib", "oku_core/dynamic_linking"]
devtools = ["oku_core/dev_tools"]
android = ["oku_core/android"]
http_client = ["oku_core/http_client"]

default = ["oku_core/vello_renderer", "oku_core/http_client", "oku_core/dev_tools"]

tinyskia_renderer = ["oku_core/tinyskia_renderer"]
vello_renderer = ["oku_core/vello_renderer"]
wgpu_renderer = ["oku_core/wgpu_renderer"]
oku_c = ["oku_core/oku_c"]


[dependencies]
oku_dylib = { path = "crates/oku_dylib", default-features = false, optional = true, version = "0.1.0"  }
oku_core = { path = "crates/oku_core", default-features = false, version = "0.1.0" }

[dev-dependencies]
oku = { path = ".", version = "0.1.0" }

serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.133"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
tracing-web = "0.1.3"
console_error_panic_hook = "0.1.7"

[dev-dependencies.reqwest]
version = "0.12.9"
default-features = false
features = ["rustls-tls", "json"]

[workspace]
resolver = "2"

members = [ "crates/oku_c",
    "crates/oku_core",
    "crates/oku_dylib", "crates/oku_logger", "website",
]

[[example]]
name = "counter"
path = "examples/counter/counter.rs"

[[example]]
name = "counter-lib"
path = "examples/counter/counter.rs"
crate-type = ["cdylib"]

[[example]]
name = "accordion"
path = "examples/accordion/accordion.rs"

[[example]]
name = "request"
path = "examples/request/request.rs"

[[example]]
name = "text"
path = "examples/text/text.rs"

[[example]]
name = "events"
path = "examples/events/events.rs"
