[package]
name = "oku_core"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

winit = { git = "https://github.com/rust-windowing/winit", rev = "6e1b9fa24d484878ebc7756987c41dd55d6a39c3" }
tiny-skia = { git = "https://github.com/RazrFalcon/tiny-skia", rev = "2cba78f9fd855804dbee65864929925ac88d7f08" }
softbuffer = { git = "https://github.com/rust-windowing/softbuffer", rev = "6d65b5bb6046a175ad271972d7848b6185ef5d96" }
cosmic-text = { git = "https://github.com/pop-os/cosmic-text", rev = "4fe90bb6126c22f589b46768d7754d65ae300c5e" }
taffy = { git = "https://github.com/DioxusLabs/taffy", rev = "eb27797b0d1935bffd781531f22312bb2b9642f0" }
wgpu = { git = "https://github.com/gfx-rs/wgpu", rev = "2021e7f29f0204a0b6b22bc59844af1e93984465" }
accesskit = "0.16.1"
reqwest = "0.12.8"
#accesskit_winit = { version = "0.18.0" }

dyn-clone = "1.0.17"

# https://crates.io/crates/glam
# SSE2 is enabled by default on x86_64 targets.
glam = { version = "0.29.0" }
env_logger = { version = "0.11.5" }
bytemuck = { version = "1.18.0", features = ["derive"] }
image = { version = "0.25.2", default-features = false, features = ["png", "jpeg"] }

cfg-if = "1.0.0"
once_cell = "1.19.0"
slotmap = "1.0.7"
tracing = "0.1.40"
chrono = "0.4.38"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
web-sys = { version = "0.3.69", features = [
    "Document",
    "Window",
    "Element",
] }
console_log = "1.0"
#wgpu = { version = "0.19.3", features = ["webgpu"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.40.0", features = ["full"] }

[features]
dynamic_linking = []
