[package]
name = "oku_core"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

oku_logging = { path = "../oku_logger" }

winit = { git = "https://github.com/rust-windowing/winit", rev="6896de5b73817a51c2e9311a52a571b400411602" }
taffy = { version = "0.7.5", default-features = false, features = ["std", "taffy_tree", "flexbox", "content_size", "block_layout"] }

# Add at the next stable release.
#accesskit = "0.17.1"
#accesskit_winit = { version = "0.23.1", features = ["tokio"] }

rustc-hash = { version = "2.1.0", default-features = false }
unicode-segmentation = "1.12.0"

# https://crates.io/crates/glam
# SSE2 is enabled by default on x86_64 targets.
glam = { version = "0.29.2" }
bytemuck = { version = "1.21.0", features = ["derive"] }
image = { version = "0.25.5", default-features = false, features = ["jpeg", "png"] }


peniko = "0.3.0"

cfg-if = "1.0.0"
chrono = "0.4.39"
bitflags = "2.7.0"

[dependencies.cosmic-text]
git = "https://github.com/pop-os/cosmic-text"
rev = "166b59f560c551dab391a864f7c1f503c1e18446"
default-features = false
features = ["std", "fontconfig"]

[dependencies.vello]
version = "0.4.0"
optional = true

[dependencies.wgpu]
version = "23.0.1"
default-features = false
features = ["wgsl"]
optional = true

[target.'cfg(not(target_os = "android"))'.dependencies.reqwest]
version = "0.12.12"
default-features = false
features = ["native-tls"]
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
#accesskit_winit = { version = "0.23.1" }
web-time = "1.1.0"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
web-sys = { version = "0.3.76", features = [
    "Document",
    "Window",
    "Element",
] }
tokio = { version = "1.43.0", default-features = false, features = ["sync"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.43.0", default-features = false, features = ["rt-multi-thread", "sync"] }


[target.'cfg(not(target_os = "android"))'.dependencies.softbuffer]
version = "0.4.6"
optional = true

[target.'cfg(not(target_os = "android"))'.dependencies.tiny-skia]
git = "https://github.com/RazrFalcon/tiny-skia"
rev = "cf6530d4b58ebb059684b446f54794b91ccc96a1"
optional = true

[target.'cfg(target_os = "android")'.dependencies.reqwest]
version = "0.12.9"
default-features = false
features = ["rustls-tls"]
optional = true

[features]
dev_tools = []
dynamic_linking = []
android = ["winit/android-native-activity"]

wgpu_renderer = ["dep:wgpu", "cosmic-text/swash",  "wgpu/fragile-send-sync-non-atomic-wasm"]
tinyskia_renderer = ["dep:tiny-skia", "dep:softbuffer", "cosmic-text/swash"]
vello_renderer = ["dep:vello", "dep:wgpu", "wgpu/fragile-send-sync-non-atomic-wasm"]
http_client = ["dep:reqwest"]
oku_c = []

default = ["vello_renderer", "http_client"]
